force-app/main/default/objects/Collection_Note__c/Collection_Note__c.object-meta.xml
<CustomObject>
    <description>Collection Notes allows users to enter and track collection activities on an Invoice. Data in this object will come via integration.</description>
    <label>Collection Note</label>
    <nameField>
        <displayFormat>CNN-{000000}</displayFormat>
        <label>Collection Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>