force-app/main/default/objects/Collection_Note__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>ERP Account Number</description>
    <label>Customer Number / Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>