force-app/main/default/objects/Collection_Note__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice</description>
    <label>Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Collection Notes</relationshipLabel>
    <relationshipName>Collection_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>