force-app/main/default/objects/Collection_Note__c/fields/Invoice_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reference_Number__c</fullName>
    <description>SAP Order Number / Invoice Reference Number</description>
    <label>SOP Order Number / Invoice Reference Num</label>
    <length>80</length>
    <type>Text</type>
</CustomField>