force-app/main/default/objects/Collection_Note__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Note Details</description>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>