force-app/main/default/objects/Collection_Note__c/fields/Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Note_Date__c</fullName>
    <description>Note Date Time</description>
    <label>Note Date</label>
    <type>DateTime</type>
</CustomField>