force-app/main/default/objects/Collection_Note__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <description>Note Type</description>
    <label>Note Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>