force-app/main/default/objects/Collection_Note__c/fields/NoteID__c.field-meta.xml
<CustomField>
    <fullName>NoteID__c</fullName>
    <description>Note External ID</description>
    <label>NoteID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>